--- a/Sac Watershed.Rmd
+++ b/Sac Watershed.Rmd
@@ -45,3 +45,14 @@ taxda_sac %>%
   summarise(result_me = mean(result)) 
 ```
 
+```{r}
+taxda_sac %>%
+  filter(result < 100) %>%
+  ggplot(aes(x=analyte,y = result, fill = organism_name))+
+  geom_boxplot(alpha = .4)+
+  facet_wrap(~organism_name)+
+  scale_y_log10()+
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+
+```
+
