--- a/exploration.Rmd
+++ b/exploration.Rmd
@@ -112,7 +112,7 @@ ggplot() +
   geom_sf(data = ca_cnty_comp, size = 0.125)+
   geom_point(data = taxda_map, aes(longitude, latitude,size = result, color = organism_name), alpha = .3)+
   labs(title = "Spatial Distribution of Our Data")+
-  theme(axis.text.x = element_text(angle = 60, hjust = 1))+
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
 ```
 
 
@@ -278,4 +278,15 @@ taxda_sepyr %>%
   theme(axis.text.x = element_text(angle = 60, hjust = 1))
 ```
 
+```{r}
+taxda_aqua <- taxda %>%
+  filter(grepl('Aqua', project))
+taxda_aqua %>%
+  count(collection_method_name)
+```
+
+```{r}
+taxda %>%
+  filter(analyte == "survival")
+```
 
