--- a/Sac Watershed.Rmd
+++ b/Sac Watershed.Rmd
@@ -11,40 +11,41 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Sac River
 
+library
 ```{r}
 library(tidyverse)
 ```
 
-
+### loading data
 ```{r}
-taxda <- readr::read_csv("toxicity_davis.csv")
+taxda <- readr::read_csv("data/toxicity_davis.csv")
 taxda_sep <- taxda %>%
     separate(sample_date, into = c("year", "month", "date"), sep="-") 
 taxda_sepyr <- taxda_sep %>% 
   mutate(year_num = as.numeric(year))
 taxda_sac <- taxda_sepyr %>%
   filter(grepl('Sac', project)) 
+#write.csv(taxda_sac,file = 'sac_org.csv')
 
 ```
 
+### Brief Analysis
 ```{r}
 taxda_sac %>%
   count(collection_depth)
 ```
 
-
+### Counting Orgnaisms
 ```{r}
 taxda_sac %>%
   ggplot(aes(x=organism_name, y= )) +
   geom_boxplot()
 ```
 
-```{r}
-taxda_sac %>%
-  group_by(year, result) %>% 
-  summarise(result_me = mean(result)) 
-```
 
+
+
+### Faceting
 ```{r}
 taxda_sac %>%
   filter(result < 100) %>%
@@ -65,3 +66,4 @@ taxda_sac %>%
 
 
 
+### Over time
