--- a/exploration.Rmd
+++ b/exploration.Rmd
@@ -116,7 +116,7 @@ ggplot() +
   geom_sf(data = ca_comp, size = 0.125)+
   geom_sf(data = ca_cnty_comp, size = 0.125)+
   geom_point(data = taxda_map, aes(longitude, latitude,size = result, color = organism_name), alpha = .3)+
-  labs(title = "Spatial Distribution of Our Data")+
+  labs(title = "Spatial Distribution")+
   theme(axis.text.x = element_text(angle = 60, hjust = 1))
 ```
 
